app/assets/stylesheets/events.css.scss
// events index
// scoped to events controller
#events_controller {
  .event-map,
  .thumbnails li {
    @include media-between($small-min, $small-max) {
      width: 49%;
      float: left;
    }
  }

  .search {
    input[type="text"] {

      @include media-between($small-min, $small-max) {
        min-width: 400px;
      }
      @include media-between($handheld-min, $handheld-max) {
        min-width: 250px;
      }
    }
      // min-width: 200px;
  }

  // validation notices for best in place
  .purr {
    position: fixed;
    top: 30px;
    right: 100px;
    width: auto;
    padding: 20px;
    @extend .alert;
    @extend .alert-error;
    &:first-letter { text-transform: uppercase };
  }

  .link-button-show {
    text-decoration: none;
    border: none;
    background-color: transparent;
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: 20px;
    color: #333333;
    white-space: nowrap;

    &:hover,
    &:focus {
      color: #ffffff;
      background-color: #0081c2;
      background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
      background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
      background-image: -o-linear-gradient(top, #0088cc, #0077b3);
      background-image: linear-gradient(to bottom, #0088cc, #0077b3);
      background-repeat: repeat-x;
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
    }
  }

}

.link-button {
    text-decoration: none;
    border: none;
    background-color: transparent;
    font-weight: normal;
    padding: 8px 12px;
    line-height: 20px;
    color: #08C;
    border: 1px solid #DDD;

    &:hover,
    &:focus {
      z-index: 2;
      border-color: #ddd;
      background-color: #eeeeee;
    }
  }


//event show
.poster-information {
  #inlay {
    background: rgba(0, 0, 0, 0.7);
  }
}

.flex-video {
  position: relative;
  padding-top: 25px;
  padding-bottom: 67.5%;
  height: 0;
  margin-bottom: 16px;
  overflow: hidden;
}

.flex-video.widescreen { padding-bottom: 57.25%; }
.flex-video.vimeo { padding-top: 0; }

.flex-video iframe,
.flex-video object,
.flex-video embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
  .flex-video { padding-top: 0; }
}

.event-poster {
  text-align: center;
}

.event-details {
  text-align: center;
}

.event-ticket-orders  {
  text-align: center;
}

// organizer/event/show
.number-stats ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.number-stats ul li:first-child {
  border-left: none;
}
.number-stats ul li {
  text-align: center;
  width: 43px;
  padding: 0 12px;
  border-left: 1px solid #5E5E5E;
  list-style: none;
  display: inline-block;
}


.event-header  {
  background-image: url(image_path('tex2res5.png'));
}

.event-ticket-orders, .event-poster {
  h1, h3, small, a, dt, dd {
    color: white;
    text-shadow: 3px 4px 5px #000;
  }
}

.venue-info {
  padding-left: 10px;
  padding-top: 10px;
}

